2006-11-07  Timothee Lecomte  <timothee.lecomte@ens.fr>

        * src/wxterminal/wxt_gui.cpp (wxtPanel::DrawToDC): Draw the zoom
        coordinates with the same font as the plot.

2006-11-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (parse_driver): If this routine fails on first entry, we
	must not call int_error() because the longjump has not been set up yet.
	I.e. "setenv GNUPLOT_DRIVER_DIR illegal; setenv GNUTERM x11; gnuplot"
	would segfault on entry. Just a print warning and hope the user notices.

2006-11-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline): If the datafile we are supposedly
	reading from was never opened, simply return DF_EOF. This relieves the
	caller from having to check this separately before calling df_readline.

	* src/datafile.c (df_open); If the datafile cannot be opened, set
	df_eof and return DF_EOF. FIXME: Having both methods is stupid; we
	should just get rid of df_eof and use the return value.

	* src/graph3d.c (do_3dplot draw_3d_graphbox) src/graphics.c (do_plot): 
	* src/plot3d.c (eval_3dplots): 
	Do a better job of skipping over plots marked NODATA.  In particular do
	not try to scan their data for scaling or plot limits, and do not place
	an entry in the key box.

	Bug #1579867

2006-11-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Fix error in logic of 2D and 3D
	rotation matrix initialization.

2006-11-01  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add an entry key for "help file", because otherwise
	this takes you to a section on avs binary format (confusing).

2006-10-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c (show_ticdef) src/save.c (save_tics): Sace/show textcolor
	of tic labels correctly for cases other than a pure linetype (TC_LT).
	Bug #1586427

2006-10-22  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/graphics.c (plot_image_or_update_axes): Operator | is