@@ -1,5 +1,5 @@
 /*
- * $Id: wxt_gui.h,v 1.14 2006/09/11 21:48:38 tlecomte Exp $
+ * $Id: wxt_gui.h,v 1.14.2.1 2006/11/10 22:33:35 tlecomte Exp $
  */
 
 /* GNUPLOT - wxt_gui.h */
@@ -172,8 +172,6 @@ extern "C" {
 #include "wxt_term.h"
 /* drawing facility */
 #include "gp_cairo.h"
-/* 'persist' */
-#include "wxt_plot.h"
 
 /* ======================================================================
  * declarations
